--- a/views/cart/index.pug
+++ b/views/cart/index.pug
@@ -13,7 +13,7 @@ block content
            th(scope='col') button
       tbody
         each item in cart
-            tr(data-id= item.product._id)
+            tr.cart-item(data-id= item.product._id)
               td
                 image(src= item.product.image, width='50',height='50')
               td= item.product.name
