--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -13,7 +13,7 @@ html
                 li.nav-item
                     a.nav-link(href='/products/') Products
                 li.nav-item
-                    a.nav-link(href='/cart/') Cart
+                    a.cart-quantity.nav-link(href='/cart/') Cart #{cart.totalQuantity}
                 if(user)
                     li.nav-item
                         a.nav-link(href='/auth/logout') Log out  
