Demo_Order_Self_Restaurant

--- a/views/cart/index.pug
+++ b/views/cart/index.pug
@@ -23,5 +23,6 @@ block content
   .total_price.float-right.d-inline-flex
     h3 total price: 
     h3.total-show #{totalPrice}
+    a.btn.btn-success.add-cart-button Dat Hoa Don
 block script
   script(src='/js/cart.js')
