--- a/views/index.pug
+++ b/views/index.pug
@@ -1,2 +1,8 @@
 extends ./layouts/common.pug
 block content
+    .row
+        each loai in LoaiMA
+            .col-4
+                a(href='/products?loai='+loai._id)
+                    img(src='/images/back-ground/'+ loai.Hinh width='290',height='230')
+                    h2 #{loai.TenLoai}
